Update Finance Admin Management System with new features and configuration changes